batch: updated to match bash script